# rust-handbook

./: README.md  docs.md
axum/: README.md
axum/compression/: Cargo.toml  README.md
axum/compression/data/: products.json
axum/compression/src/: main.rs  tests.rs
axum/cors-server/: Cargo.toml  README.md
axum/cors-server/src/: main.rs
axum/customize-extractor-error/: Cargo.toml
axum/customize-extractor-error/src/: main.rs
axum/error-handling/: Cargo.toml  README.md
axum/error-handling/src/: main.rs
axum/global-404-handler/: Cargo.toml
axum/global-404-handler/src/: main.rs
axum/graceful-shutdown/: Cargo.toml  README.md
axum/graceful-shutdown/src/: main.rs
axum/handle-head-request/: Cargo.toml  README.md
axum/handle-head-request/src/: main.rs
axum/key-vault-store/: Cargo.toml  README.md
axum/practice-1/: Cargo.toml  README.md
axum/practice-1/src/: main.rs
axum/proxy-server/: Cargo.toml
axum/proxy-target-server/: Cargo.toml
axum/proxy-target-server/src/: main.rs
axum/rate-limit-server/: Cargo.toml  README.md
axum/rate-limit-server/src/: main.rs
axum/request-handler/: Cargo.toml
axum/simple-server/: Cargo.toml  README.md
axum/simple-server/src/: main.rs
axum/template-server/: Cargo.toml  READMD.md  README.md
axum/template-server/config/: default.toml
axum/template-server/src/: config.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  state.rs
axum/tokio-postgres/: Cargo.toml  README.md
axum/tokio-postgres/src/: main.rs
axum/tokio-redis/: Cargo.toml  README.md
axum/tokio-redis/src/: main.rs
clap/: README.md
clap/crypto-tool/: Cargo.toml  README.md
clap/crypto-tool/src/: encrypt.rs  file.rs  lib.rs  main.rs  types.rs
clap/demo/: Cargo.toml  README.md
clap/demo/src/: main.rs
clap/file-tool/: .gitignore  Cargo.toml  README.md
clap/file-tool/src/: main.rs
clap/grep-lite/: .gitignore  Cargo.toml  README.md
clap/grep-lite/src/: main.rs
clap/http-request/: Cargo.toml  README.md
clap/http-request/src/: main.rs
clap/img-resize/: .gitignore  Cargo.toml  README.md
clap/img-resize/src/: main.rs
clap/log-analyzer/: Cargo.toml  README.md
clap/log-analyzer/src/: main.rs  utils.rs
examples/basic/: Cargo.toml
examples/syntax/: Cargo.toml  README.md
examples/syntax/src/: arc_module.rs  atomic_module.rs  date_module.rs  enum_module.rs  err_module.rs  impl_module.rs  iter_module.rs  lib.rs  main.rs  map_module.rs  mutex_module.rs  option_module.rs  result_module.rs  str_module.rs  thread_module.rs
generic/: README.md
generic/cookbook/: Cargo.toml  README.md
generic/syntax/: README.md
generic/syntax/examples/: arc.rs  as.rs  as_ref.rs  default.rs  err.rs  example.rs  hashmap.rs  if_let.rs  impl.rs  iter.rs  match.rs  option.rs  own.rs  result.rs  str.rs  string.rs  struct.rs  test.rs  thread.rs  type.rs  vec.rs
http-client/: Cargo.toml
http-server/: Cargo.toml  README.md
http-server/src/: config.rs  http.rs  main.rs  models.rs  router.rs  state.rs
http-server/src/handlers/: users.rs
network/http-server/: Cargo.toml
network/http-server/src/: http.rs  main.rs  state.rs
network/simple-http-server/: Cargo.toml
network/simple-http-server/src/: main.rs
network/udp-echo-server/: Cargo.toml  README.md
network/udp-server/: README.md
network/udp-server/examples/: basic_server.rs
sandbox/axum-hello/: Cargo.toml
sandbox/axum-hello/src/: main.rs
sandbox/sqlx-hello/: Cargo.toml  README.md
sandbox/sqlx-hello/src/: main.rs
sandbox/src/: main.rs
sandbox/syntax/: README.md
sandbox/syntax/src/: arc_module.rs  dyn_module.rs  lib.rs  main.rs  str_module.rs
sandbox/tokio-hello/: Cargo.toml  README.md
simple-http-server/: README.md
sqlx/sqlx-hello/: README.md
sqlx/sqlx-hello/src/: main.rs
tokio/tokio-hello/: Cargo.toml
udp-server/: Cargo.toml  README.md
udp-server/examples/: client.rs
udp-server/src/: lib.rs  main.rs
