[package]
name = "compression"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-br", "decompression-br"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
