[package]
name = "error-handling"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
