[package]
name = "proxy-target-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
hyper = "1.5"
hyper-util = { version = "0.1.9", features = [
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
hyper-tls = "0.6"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
