[package]
name = "rate-limit-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tower = "0.5.2"
tower_governor = "0.7.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
