[package]
name = "tokio-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
chrono = "0.4.41"
