[package]
name = "tokio-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bb8 = "0.9.0"
bb8-redis = "0.24.0"
redis = "0.32.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
